[package]
name = "tmux-babysitter"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
